--- a/file-to-file-beam/pom.xml
+++ b/file-to-file-beam/pom.xml
@@ -31,11 +31,11 @@
       <artifactId>beam-sdks-java-core</artifactId>
       <version>${beam.version}</version>
     </dependency>
-    <dependency>
-      <groupId>org.apache.beam</groupId>
-      <artifactId>beam-sdks-java-extensions-json-jackson</artifactId>
-      <version>2.34.0</version>
-    </dependency>
+<!--    <dependency>-->
+<!--      <groupId>org.apache.beam</groupId>-->
+<!--      <artifactId>beam-sdks-java-extensions-json-jackson</artifactId>-->
+<!--      <version>2.34.0</version>-->
+<!--    </dependency>-->
     <dependency>
       <groupId>org.apache.beam</groupId>
       <artifactId>beam-runners-direct-java</artifactId>
