--- a/file-to-file-beam/pom.xml
+++ b/file-to-file-beam/pom.xml
@@ -17,7 +17,7 @@
     <maven-compiler-plugin.version>3.6.1</maven-compiler-plugin.version>
     <maven-exec-plugin.version>1.4.0</maven-exec-plugin.version>
     <maven-jar-plugin.version>3.0.2</maven-jar-plugin.version>
-    <maven-shade-plugin.version>3.0.0</maven-shade-plugin.version>
+    <maven-shade-plugin.version>3.5.0</maven-shade-plugin.version>
   </properties>
 
   <dependencies>
@@ -31,11 +31,6 @@
       <artifactId>beam-sdks-java-core</artifactId>
       <version>${beam.version}</version>
     </dependency>
-<!--    <dependency>-->
-<!--      <groupId>org.apache.beam</groupId>-->
-<!--      <artifactId>beam-sdks-java-extensions-json-jackson</artifactId>-->
-<!--      <version>2.34.0</version>-->
-<!--    </dependency>-->
     <dependency>
       <groupId>org.apache.beam</groupId>
       <artifactId>beam-runners-direct-java</artifactId>
@@ -120,6 +115,12 @@
             </goals>
             <configuration>
               <finalName>${project.artifactId}-bundled-${project.version}</finalName>
+              <artifactSet>
+                <excludes>
+<!--                  <exclude>com.fasterxml.jackson.core:*</exclude>-->
+                  <exclude>com.fasterxml.jackson.dataformat:*</exclude>
+                </excludes>
+              </artifactSet>
               <filters>
                 <filter>
                   <artifact>*:*</artifact>
@@ -132,12 +133,17 @@
                 </filter>
               </filters>
               <transformers>
-                <transformer implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer"/>
+                <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
+                  <manifestEntries>
+                    <Main-Class>com.michael.beam.CoGroupByKeyPipeline</Main-Class>
+                  </manifestEntries>
+                </transformer>
               </transformers>
             </configuration>
           </execution>
         </executions>
       </plugin>
+
     </plugins>
   </build>
 
