update for running beam job in the flink cluster

--- a/file-to-file-beam/Makefile
+++ b/file-to-file-beam/Makefile
@@ -1,3 +1,5 @@
+DOCKER_ID = 4aba8fce0184
+
 test:
 	mvn test
 
@@ -21,7 +23,7 @@ run-flink-sideinput:
 	mvn package exec:java -Dexec.mainClass=com.michael.beam.SideinputPipeline \
       -Pflink-runner \
       -Dexec.args="--runner=FlinkRunner \
-       --input=/Users/michael_sun/IdeaProjects/data-eng-tech-assessment/source-data/pedestrian \
+       --input=/tmp \
        --output=/tmp/output \
        --flinkMaster=http://127.0.0.1:8083 \
        --filesToStage=target/file-to-file-beam-bundled-0.1.jar"
@@ -39,3 +41,7 @@ run-jar-cogroup:
 			--runner=DirectRunner \
 			--input=/Users/michael_sun/IdeaProjects/data-eng-tech-assessment/source-data/pedestrian \
             --output=/Users/michael_sun/IdeaProjects/data-eng-tech-assessment/tmp/output
+
+cp-to-docker:
+	docker cp /Users/michael_sun/IdeaProjects/data-eng-tech-assessment/source-data/pedestrian/pedestrian-counting-system-monthly-counts-per-hour.json $(DOCKER_ID):/tmp/
+	docker cp /Users/michael_sun/IdeaProjects/data-eng-tech-assessment/source-data/pedestrian/pedestrian-counting-system-sensor-locations.json $(DOCKER_ID):/tmp/
