--- a/file-to-file-beam/Makefile
+++ b/file-to-file-beam/Makefile
@@ -1,5 +1,3 @@
-DOCKER_ID = 4aba8fce0184
-
 test:
 	mvn test
 
@@ -25,6 +23,17 @@ run-flink-sideinput:
       -Dexec.args="--runner=FlinkRunner \
        --input=/tmp \
        --output=/tmp/output \
+       --parallelism=3 \
+       --flinkMaster=http://127.0.0.1:8083 \
+       --filesToStage=target/file-to-file-beam-bundled-0.1.jar"
+
+run-flink-cogroup:
+	mvn package exec:java -Dexec.mainClass=com.michael.beam.CoGroupByKeyPipeline \
+      -Pflink-runner \
+      -Dexec.args="--runner=FlinkRunner \
+       --input=/tmp \
+       --output=/tmp/output \
+       --parallelism=3 \
        --flinkMaster=http://127.0.0.1:8083 \
        --filesToStage=target/file-to-file-beam-bundled-0.1.jar"
 
@@ -41,7 +50,3 @@ run-jar-cogroup:
 			--runner=DirectRunner \
 			--input=/Users/michael_sun/IdeaProjects/data-eng-tech-assessment/source-data/pedestrian \
             --output=/Users/michael_sun/IdeaProjects/data-eng-tech-assessment/tmp/output
-
-cp-to-docker:
-	docker cp /Users/michael_sun/IdeaProjects/data-eng-tech-assessment/source-data/pedestrian/pedestrian-counting-system-monthly-counts-per-hour.json $(DOCKER_ID):/tmp/
-	docker cp /Users/michael_sun/IdeaProjects/data-eng-tech-assessment/source-data/pedestrian/pedestrian-counting-system-sensor-locations.json $(DOCKER_ID):/tmp/
