--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -88,9 +88,23 @@ services:
       - beam-network
     environment:
       - FLINK_MASTER_PORT_6123_TCP_ADDR=flink-master
-      - FLINK_NUM_TASK_SLOTS=10
+      - FLINK_NUM_TASK_SLOTS=2
     depends_on:
         - flink-master
+
+  flink-worker-2:
+    image: bde2020/flink-worker:1.14.5-hadoop3.2
+    hostname: flink-worker-2
+    container_name: flink-worker-2
+    volumes:
+      - /Users/michael_sun/IdeaProjects/data-eng-tech-assessment/source-data/pedestrian:/tmp
+    networks:
+      - beam-network
+    environment:
+      - FLINK_MASTER_PORT_6123_TCP_ADDR=flink-master
+      - FLINK_NUM_TASK_SLOTS=2
+    depends_on:
+      - flink-worker
 
 volumes:
   minio-data:
